--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "swiper": "^9.0.5",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
