--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,20 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^5.0.18",
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "swiper": "^9.0.5",
+    "uniqid": "^5.4.0",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
